tests/samples/positive/core/builtins.ax
module builtins;

struct Pair {
    a: i32;
    b: i32;
}

struct Padded {
    tag: u8;
    value: u64;
}

enum Tiny: u16 {
    zero = 0,
    one = 1,
}

fn sum_checked_text(bytes: []u8) -> i32 {
    if !strvalid(bytes) {
        return -1;
    }
    let text: str = strfromutf8(bytes);
    return ((text.len) as i32);
}

fn main() -> i32 {
    var pair: Pair = Pair { a: 1, b: 2 };
    let addr: usize = ptraddr(&pair);
    let pair_ptr: *mut Pair = unsafe { ptrat<*mut Pair>(addr) };
    let pointer_size: usize = sizeof<*mut Pair>();
    let pointer_align: usize = alignof<*mut Pair>();
    if pointer_size == ((0) as usize) || pointer_align == ((0) as usize) {
        return 1;
    }

    if ((true) as i32) != 1 || ((2) as bool) != true {
        return 2;
    }

    let erased: *const void = unsafe { ptrcast<*const void>(&pair) };
    let restored: *const Pair = unsafe { ptrcast<*const Pair>(erased) };
    if ptraddr(restored) != addr {
        return 3;
    }

    let zero_bits: f32 = unsafe { bitcast<f32>(((0) as u32)) };
    if zero_bits != 0.0f32 {
        return 4;
    }

    if sizeof<Padded>() != ((16) as usize) || alignof<Padded>() != ((8) as usize) {
        return 5;
    }
    if sizeof<Tiny>() != ((2) as usize) || alignof<Tiny>() != ((2) as usize) {
        return 6;
    }

    let ascii_bytes: [2]u8 = b"ok";
    let ascii: []u8 = ascii_bytes[:];
    if sum_checked_text(ascii) != 2 {
        return 7;
    }
    if ascii.len != 2usize {
        return 11;
    }
    let ascii_ptr: *const u8 = ascii.ptr;
    if unsafe { ascii_ptr[0usize] } != b'o' {
        return 12;
    }

    let invalid_bytes: [1]u8 = [0x80u8];
    let invalid: []u8 = invalid_bytes[:];
    if strvalid(invalid) {
        return 8;
    }
    if strfromutf8(invalid).len != 0usize {
        return 9;
    }

    let raw: str = unsafe { strraw("raw".ptr, "raw".len) };
    if raw.len != 3usize {
        return 10;
    }

    return unsafe { pair_ptr.a + pair_ptr.b } - 3;
}
