tests/samples/negative/pointers/raw_pointer_field_write_requires_unsafe.ax
module raw_pointer_field_write_requires_unsafe;

struct Pair {
    value: i32;
}

fn as_mut_pair_ptr(value: &mut Pair) -> *mut Pair {
    return unsafe { ptrat[*mut Pair](ptraddr(value)) };
}

fn main() -> i32 {
    var pair: Pair = Pair { value: 1 };
    let ptr: *mut Pair = as_mut_pair_ptr(&mut pair);
    ptr.value = 2;
    return pair.value;
}
